[package]
name = "confik-macros"
version = "0.12.0"
description = "Macros for confik"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }

[dev-dependencies]
assert_matches = "1.5"
confik = "0.12"
indoc = "2"
rustversion-msrv = "0.100"
serde = { version = "1.0.217", features = ["derive"] }
serde-bool = "0.1.3"
toml = "0.8"
trybuild = { version = "1", features = ["diff"] }
